[package]
name = "rustie-mqtt-broker"
version = "0.1.0"
edition = "2021"
description = "A robust MQTT broker library supporting MQTT 3.0, 3.1, 3.1.1, 5.0, 5.1 and WebSocket"
license = "MIT"
publish = false

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
bytes = "1"
tracing = "0.1"
thiserror = "1"
tracing-subscriber = "0.3.19"

[dev-dependencies]
paho-mqtt = "0.12"
tokio = { version = "1", features = ["full", "test-util"] }
